fix: modules pagination
