# backend/src/modules/cities/infra/http/routes/cities.routes.ts
@@ -12,12 +12,6 @@ const citiesRouter = Router();
 const citiesController = new CitiesController();
 
 citiesRouter.get(
-  '/pagination/all',
-  ensureAuthenticationPossibility,
-  citiesController.pagination,
-);
-
-citiesRouter.get(
   '/all',
   ensureAuthenticationPossibility,
   citiesController.show,
