# backend/src/modules/holidays/infra/http/routes/holidays.routes.ts
@@ -10,12 +10,6 @@ const holidaysRouter = Router();
 
 const holidaysController = new HolidaysController();
 
-holidaysRouter.get(
-  '/pagination/all',
-  ensureAuthenticated,
-  holidaysController.pagination,
-);
-
 holidaysRouter.get('/all', ensureAuthenticated, holidaysController.show);
 
 holidaysRouter.get(
