# backend/src/modules/modals/infra/http/routes/modals.routes.ts
@@ -10,12 +10,6 @@ const modalsRouter = Router();
 
 const modalsController = new ModalsController();
 
-modalsRouter.get(
-  '/pagination/all',
-  ensureAuthenticated,
-  modalsController.pagination,
-);
-
 modalsRouter.get('/all', ensureAuthenticated, modalsController.show);
 
 modalsRouter.post(
