# backend/src/modules/opinions/infra/http/routes/opinions.routes.ts
@@ -10,12 +10,6 @@ const opinionsRouter = Router();
 
 const opinionsController = new OpinionsController();
 
-opinionsRouter.get(
-  '/pagination/all',
-  ensureAuthenticated,
-  opinionsController.pagination,
-);
-
 opinionsRouter.get('/all', ensureAuthenticated, opinionsController.show);
 
 opinionsRouter.post(
