# backend/src/modules/providers/infra/http/routes/providers.routes.ts
@@ -10,12 +10,6 @@ const providersRouter = Router();
 
 const providersController = new ProvidersController();
 
-providersRouter.get(
-  '/pagination/all',
-  ensureAuthenticated,
-  providersController.pagination,
-);
-
 providersRouter.get('/all', ensureAuthenticated, providersController.show);
 
 providersRouter.get(
