# backend/src/modules/users/infra/http/routes/users.routes.ts
@@ -10,12 +10,6 @@ const usersRouter = Router();
 
 const usersController = new UsersController();
 
-usersRouter.get(
-  '/pagination/all',
-  ensureAuthenticated,
-  usersController.pagination,
-);
-
 usersRouter.get('/all', ensureAuthenticated, usersController.show);
 
 usersRouter.post(
